--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
 # command to install dependencies
 install:
   - pip install -q -e . --use-mirrors
+  - pip install coveralls
 # command to run tests
-script: python manage.py test
+script:
+  - coverage run --source=simple_import manage.py test
+after_success:
+  coveralls
 sudo: false
