--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
-# command to install dependencies
+  - "3.5"
+env:
+  - DJANGO_VERSION=1.9.10
+  - DJANGO_VERSION=1.10.1
 install:
+  - pip install -q Django==$DJANGO_VERSION --use-mirrors
   - pip install -q -e . --use-mirrors
   - pip install coveralls
 # command to run tests
