--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - DJANGO_VERSION=1.9.10
   - DJANGO_VERSION=1.10.1
 install:
-  - pip install -q Django==$DJANGO_VERSION --use-mirrors
+  - pip install -q Django==$DJANGO_VERSION
   - pip install -q -e . --use-mirrors
   - pip install coveralls
 # command to run tests
