--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   - DJANGO_VERSION=1.10.1
 install:
   - pip install -q Django==$DJANGO_VERSION
-  - pip install -q -e . --use-mirrors
+  - pip install -q -e .
   - pip install coveralls
 # command to run tests
 script:
